--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>the first heading</h1>
     <h6>the second heading</h6>
+    <p>this is the first paragragh</p>
+    <p>this is the second paragragh</p>
 </body>
 </html>
