--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>the first heading that have made adjustmentt</h1>
+    <h3>totaly different</h3>
     <h6>the second heading, am smaller than the sefist heading </h6>
     <p>this is the first paragragh</p>
     <p>this is the second paragragh</p>
